--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header>
 		<img id="imagem-principal" src="imagem1.jpeg">
-		        <h1>Que isso meu filho calma</h1>
+		        <h1>Ajude a Mudar o Mundo</h1>
 		<nav>
 			<ul>
 			  <li class="home"><a href="index.html">Home</a></li>	
@@ -27,7 +27,7 @@
 		
 		<div class="principal">
 			<h2 strong>Missão do Projeto</h2>
-			<p>De acordo com Unicef, que declara na Conferência De Jomtien – 1990, nosso desejo é “… diminuir as desigualdades sociais e intelectuais em todas as faixas etárias oferecendo atividades educacionais, de bem-estar e capacitação de mão de obra, tornando-os aptos...” dessa maneira possibilitando sua inserção no mercado de trabalho, melhorando a aprendizagem com expectativas de melhor qualidade de vida”.
+			<p>Num mundo impregnado de tecnologia e inovação, evitar o desperdício de alimentos se destaca como uma chance de mudar nossa relação com o mundo e com a comida. Pequenas ações, como planejar refeições e compartilhar recursos, podem ter um impacto global, reduzindo o impacto ambiental e promovendo uma mentalidade de responsabilidade. Essa mudança não apenas preserva recursos, mas também educa as gerações futuras sobre cuidar da Terra. Evitar o desperdício de alimentos é um compromisso com a harmonia entre humanos e o planeta, transformando escolhas individuais em uma revolução por um futuro mais sustentável e igualitário.
 			</p>
 	    </div>
 	</main>
