--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	<main>
 		
 		<div class="principal">
-			<h2 strong>Missão do Projeto</h2>
+			<h2 strong>Evite o Desperdício de Alimentos</h2>
 			<p>Num mundo impregnado de tecnologia e inovação, evitar o desperdício de alimentos se destaca como uma chance de mudar nossa relação com o mundo e com a comida. Pequenas ações, como planejar refeições e compartilhar recursos, podem ter um impacto global, reduzindo o impacto ambiental e promovendo uma mentalidade de responsabilidade. Essa mudança não apenas preserva recursos, mas também educa as gerações futuras sobre cuidar da Terra. Evitar o desperdício de alimentos é um compromisso com a harmonia entre humanos e o planeta, transformando escolhas individuais em uma revolução por um futuro mais sustentável e igualitário.
 			</p>
 	    </div>
