--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="reset.css">
 	<link rel="stylesheet" href="style.css">
-	<title>Que isso meu filho calma</title>
+	<title>Mudando o Mundo</title>
 </head>
 <body>
     <header>
-		<img id="imagem-principal" src="imagem1.jpeg">
+		
 		        <h1>Ajude a Mudar o Mundo</h1>
 	
 	
